fix: made the scrollbar more visible
* fix: changed scrollbar color

--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -29,7 +29,7 @@ code {
 }
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background: #2c2c2c;
+  background: #474747;
 }
 
 h1, h2, h3, h4, h4, h5, h6 {
